<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.3</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>org.jakartaee5g23</groupId>
	<artifactId>sports-field-booking</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>sports-field-booking</name>
	<description>Sports Field Booking Software</description>
	<url>https://github.com/your-organization/your-project</url>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>3121410359</id>
			<name>Lê Duy Nhân</name>
			<email>benlun99999@gmail.com</email>
			<url>https://your-website.com</url>
			<organization>Sai Gon University - DCT1219</organization>
			<organizationUrl>https://your-organization.com</organizationUrl>
			<roles>
				<role>leader</role>
				<role>full stack</role>
			</roles>
		</developer>

		<developer>
			<id>312141...</id>
			<name>Huỳnh Ngọc Triều</name>
			<email>...@gmail.com</email>
			<url>https://your-website.com</url>
			<organization>Sai Gon University - </organization>
			<organizationUrl>https://your-organization.com</organizationUrl>
			<roles>
				<role>member</role>
				<role>full stack</role>
			</roles>
		</developer>

		<developer>
			<id>312141...</id>
			<name>Gia Bảo</name>
			<email>...@gmail.com</email>
			<url>https://your-website.com</url>
			<organization>Sai Gon University - </organization>
			<organizationUrl>https://your-organization.com</organizationUrl>
			<roles>
				<role>member</role>
				<role>full stack</role>
			</roles>
		</developer>

		<developer>
			<id>312141...</id>
			<name>Võ Thắng</name>
			<email>...@gmail.com</email>
			<url>https://your-website.com</url>
			<organization>Sai Gon University - </organization>
			<organizationUrl>https://your-organization.com</organizationUrl>
			<roles>
				<role>member</role>
				<role>full stack</role>
			</roles>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/your-organization/your-project.git</connection>
		<developerConnection>scm:git:ssh://github.com/your-organization/your-project.git</developerConnection>
		<tag>HEAD</tag>
		<url>https://github.com/your-organization/your-project</url>
	</scm>

	<properties>
		<java.version>22</java.version>
		<projectlombok-lombok.version>1.18.34</projectlombok-lombok.version>
		<mapstruct.version>1.6.0</mapstruct.version>
		<openapi.version>2.6.0</openapi.version>
		<minio.version>8.5.12</minio.version>
		<jedis.version>5.1.5</jedis.version>
		<javafaker.version>1.0.2</javafaker.version>
	</properties>

	<dependencies>
		<!--OAUTH 2-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
		</dependency>

		<!--WEB-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<!--VALIDATION-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<!--JPA-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<!--REDIS-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis</artifactId>
		</dependency>

		<dependency>
			<groupId>redis.clients</groupId>
			<artifactId>jedis</artifactId>
			<version>${jedis.version}</version>
		</dependency>

		<!--MYSQL-->
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<scope>runtime</scope>
		</dependency>

		<!--KAFKA-->
		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka</artifactId>
		</dependency>

		<!--MINIO-->
		<dependency>
			<groupId>io.minio</groupId>
			<artifactId>minio</artifactId>
			<version>${minio.version}</version>
		</dependency>

		<!--SPRING BOOT STARTER MAIL-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>

		<!--THYMELEAF-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>

		<!--ACTUATOR-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<!--OPENAPI-->
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>${openapi.version}</version>
		</dependency>

		<!--LOMBOK-->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>

		<!--MAPSTRUCT-->
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>${mapstruct.version}</version>
		</dependency>

		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct-processor</artifactId>
			<version>${mapstruct.version}</version>
		</dependency>

		<!--FAKER-->
		<dependency>
			<groupId>com.github.javafaker</groupId>
			<artifactId>javafaker</artifactId>
			<version>${javafaker.version}</version>
		</dependency>

		<!--TEST-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>dev</id>
			<properties>
				<spring.profiles.active>dev</spring.profiles.active>
			</properties>
		</profile>

		<profile>
			<id>test</id>
			<properties>
				<spring.profiles.active>test</spring.profiles.active>
			</properties>
		</profile>

		<profile>
			<id>prod</id>
			<properties>
				<spring.profiles.active>prod</spring.profiles.active>
			</properties>
		</profile>
	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
        </plugins>
	</build>

</project>
